# letterboxd-recs

./: .gitignore  README.md  config.example.toml  config.toml  letterboxd_recs.sqlite-shm  letterboxd_recs.sqlite-wal  pyproject.toml  recommendations.txt
docs/: architecture.md  handoff.md  index.html  recommender.md  tickets.md  tuning.md
src/letterboxd_recs/: __init__.py  cli.py  config.py
src/letterboxd_recs/availability/: __init__.py  providers.py
src/letterboxd_recs/db/: conn.py  repo.py  schema.sql
src/letterboxd_recs/export/: html.py
src/letterboxd_recs/graph/: __init__.py  ingest.py
src/letterboxd_recs/ingest/: __init__.py
src/letterboxd_recs/ingest/letterboxd/: __init__.py  browser.py  client.py  ingest.py  parse.py  social.py
src/letterboxd_recs/models/: social_simple.py
src/letterboxd_recs/tools/: __init__.py  backfill_films.py  ingest_followee_films.py
src/letterboxd_recs/util/: cache.py  logging.py  ratelimit.py  retry.py
tests/: test_availability_repo.py  test_browser_fetch.py  test_export_html.py  test_followee_selection.py  test_graph.py  test_missing_followees.py  test_parsers.py  test_provider_mapping.py  test_similarity.py  test_social_ratings.py  test_social_simple.py  test_social_user_limit.py  test_sprint1.py  test_time_weight.py  test_weekly_pipeline.py
tests/fixtures/: diary.html  film_page.html  films.html  following.html  following_live.html  following_rows.html  genres.html  likes.html  profile.html  watchlist.html  where_to_watch.html
tools/: playground_scrape.py  weekly_publish.sh
