[project]
name = "letterboxd-recs"
version = "0.1.0"
description = "Personalized Letterboxd recommendations with social-graph signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
letterboxd-recs = "letterboxd_recs.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
